fixtures/cs-hash-02/good/compare-with-weak-hash-naming.ts
import bcrypt from "bcrypt";

export function verifyPassword(plainPassword: string, passwordHash: string) {
	return bcrypt.compareSync(plainPassword, passwordHash);
}
