fixtures/cs-hash-02/bad/module-level-password-hash.ts
import bcrypt from "bcrypt";

export const passwordHash = bcrypt.hashSync("seed", 8);
